# Runesmaker

./: .gitignore  README.md  pyproject.toml  requirements.txt  runesmaker.sh  ui.py
pipeline/: auto_translate.py  blend.py  cli.py  export.py  glyph_extract.py  loader.py  vectorize.py
renderer/: CMakeLists.txt
renderer/shaders/: rune.frag  rune.vert
renderer/src/: app.cpp  app.h  camera.cpp  camera.h  exporter.cpp  exporter.h  main.cpp  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  vulkan_context.cpp  vulkan_context.h
translations/: Fire.csv  Water.csv  languages.txt
